# ucf_parking_cli

./: Cargo.toml
src/: main.rs
