[package]
name = "ucf_parking_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
futures = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features =["derive"] }